--- a/index.html
+++ b/index.html
@@ -30,34 +30,41 @@
       align-items: center;
     }
 
-    /* "Brain" container */
+    /* NIEUWE brain-container zonder overlap: 3x3 grid */
     .brain {
       position: relative;
       width: 100%;
-      padding-top: 75%; /* aspect ratio */
+      aspect-ratio: 4 / 3;
       background: radial-gradient(circle at 30% 30%, #ffffff, #dde4ff);
       border-radius: 50% / 60%;
       box-shadow: 0 18px 40px rgba(10, 30, 80, 0.18);
-      overflow: visible;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      padding: 1.2rem;
+      gap: 1.2rem;
+      box-sizing: border-box;
     }
 
     .brain-node {
-      position: absolute;
-      transform: translate(-50%, -50%);
       border: none;
       border-radius: 999px;
-      padding: 0.4rem 0.9rem;
+      padding: 0.45rem 0.9rem;
       font-size: 0.8rem;
       background: #ffffffdd;
       box-shadow: 0 4px 12px rgba(6, 35, 90, 0.2);
       cursor: pointer;
       transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
       backdrop-filter: blur(4px);
-      white-space: nowrap;
+      white-space: normal;
+      text-align: center;
+      justify-self: center;
+      align-self: center;
+      max-width: 100%;
     }
 
     .brain-node:hover {
-      transform: translate(-50%, -50%) scale(1.05);
+      transform: scale(1.05);
       box-shadow: 0 8px 18px rgba(6, 35, 90, 0.25);
       background: #eef3ff;
     }
@@ -68,23 +75,25 @@
       box-shadow: 0 10px 22px rgba(38, 71, 255, 0.45);
     }
 
-    /* positions of the 6 lobes */
-    .node-creators  { top: 18%; left: 30%; }
-    .node-cmos      { top: 36%; left: 72%; }
-    .node-unions    { top: 63%; left: 25%; }
-    .node-heritage  { top: 80%; left: 55%; }
-    .node-education { top: 50%; left: 42%; }
-    .node-creative  { top: 25%; left: 65%; }
+    /* Plaatsing in grid (geen overlap mogelijk) */
+    .node-creators  { grid-row: 1; grid-column: 1; }
+    .node-creative  { grid-row: 1; grid-column: 3; }
+    .node-cmos      { grid-row: 2; grid-column: 3; }
+    .node-unions    { grid-row: 3; grid-column: 1; }
+    .node-heritage  { grid-row: 3; grid-column: 3; }
+    .node-education { grid-row: 2; grid-column: 1; }
 
     .brain-center-label {
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      width: 70%;
+      grid-row: 2;
+      grid-column: 2;
+      align-self: center;
+      justify-self: center;
+      width: 90%;
       text-align: center;
-      font-size: 0.75rem;
+      font-size: 0.78rem;
       color: #4b5680;
       line-height: 1.3;
+      padding: 0.4rem 0.6rem;
     }
 
     /* Detail panel */
@@ -167,11 +176,11 @@
   <div class="brain-layout">
     <div class="brain" id="brain">
       <button class="brain-node node-creators" data-family="creators">Creators &amp; Copyright</button>
+      <button class="brain-node node-creative" data-family="creative">Creative Economy &amp; Design</button>
       <button class="brain-node node-cmos" data-family="cmos">CMOs &amp; Collective Management</button>
       <button class="brain-node node-unions" data-family="unions">Trade Unions &amp; Social Partners</button>
       <button class="brain-node node-heritage" data-family="heritage">Heritage &amp; Libraries</button>
       <button class="brain-node node-education" data-family="education">Education &amp; Mobility</button>
-      <button class="brain-node node-creative" data-family="creative">Creative Economy &amp; Design</button>
 
       <div class="brain-center-label">
         EU Cultural &amp; Creative Sectors<br/>
@@ -486,26 +495,4 @@
       taglineEl.textContent = fam.tagline;
       listEl.innerHTML = "";
       fam.organisations.forEach(org => {
-        const li = document.createElement("li");
-        li.className = "org-item";
-        li.innerHTML = `
-          <div class="org-name">${org.name}</div>
-          <div class="org-meta">${org.type}</div>
-          <div class="org-role">${org.role}</div>
-          <div class="org-url"><a href="${org.url}" target="_blank" rel="noopener noreferrer">${org.url}</a></div>
-        `;
-        listEl.appendChild(li);
-      });
-    }
-
-    nodes.forEach(node => {
-      node.addEventListener("click", () => {
-        renderFamily(node.dataset.family);
-      });
-    });
-
-    // Start with creators selected by default
-    renderFamily("creators");
-  </script>
-</body>
-</html>
+        const li = document.createEleme
